# ants

./: Cargo.toml  README.md
src/: ant.rs  main.rs  shape.rs  world.rs
