[package]
name = "ants"
version = "0.0.1"
authors = ["Teresa Maria Rivera"]
description = "A CyberPatriots scoring engine library"
repository = "https://github.com/ComradeYellowCitrusFruit/ants"
keywords = ["ants"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.31.2"
gl = "0.14.0"
rand = "0.8.5"
glm = "0.2.3"
